--- a/wwwroot/css/MyProfile.css
+++ b/wwwroot/css/MyProfile.css
@@ -162,3 +162,15 @@ a {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
+
+.buttontask {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    /* show a hand cursor on hover; some argue that we
+  should keep the default arrow cursor for buttons */
+    cursor: pointer;
+    text-align:left;
+}
