--- a/Pages/Components/ProjectTasksComponent.razor
+++ b/Pages/Components/ProjectTasksComponent.razor
@@ -1,7 +1,8 @@
 ﻿@using Siemens.MP.Enums
 @inject Siemens.MP.Data.Repositories.GenericRepository<Siemens.MP.Entities.Task> TaskRepository
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
-
+@if (IdProject != 0)
+{
 <div class="row" style=" margin-top:5%">
     <div class="taskcolumn">
         <div class="taskcard">
@@ -40,7 +41,7 @@
         </div>
     </div>
 </div>
-
+}
 @code {
     private IList<Siemens.MP.Entities.Task> tasks = new List<Siemens.MP.Entities.Task>();
 
