--- a/Pages/Projects.razor
+++ b/Pages/Projects.razor
@@ -43,7 +43,7 @@ else
             </ul>
         </div>
         <div class="project-second-column">
-            <Siemens.MP.Pages.Components.DetailedProjectComponent @bind-IdProject="ProjectID" @bind-edit="edit"></Siemens.MP.Pages.Components.DetailedProjectComponent>
+            <Siemens.MP.Pages.Components.DetailedProjectComponent @bind-IdProject="ProjectID" @bind-edit="edit" @bind-addTask="addTask"></Siemens.MP.Pages.Components.DetailedProjectComponent>
             <Siemens.MP.Pages.Components.ProjectTasksComponent @bind-IdProject="ProjectID"></Siemens.MP.Pages.Components.ProjectTasksComponent>
         </div>
     </div>
@@ -60,6 +60,9 @@ else
     [Parameter]
     public bool edit { get; set; }
 
+    [Parameter]
+    public bool addTask { get; set; }
+
     protected override async System.Threading.Tasks.Task OnInitializedAsync()
     {
         projects = await ProjectRepository.GetAll();
@@ -71,6 +74,7 @@ else
         ProjectID = projectID;
         edit = false;
         ShowPopup = false;
+        addTask = false;
         await OnInitializedAsync();
     }
 
