added delete button in detailed task and list of users in add task button(not implemented yet)

--- a/Pages/Components/DetailedProjectComponent.razor
+++ b/Pages/Components/DetailedProjectComponent.razor
@@ -1,5 +1,6 @@
 ﻿@using Siemens.MP.Entities
 @inject Siemens.MP.Data.Repositories.GenericRepository<Project> ProjectRepository
+@inject NavigationManager NavManager
 @if (project == null)
 {
     <div class="card">
