--- a/wwwroot/css/DetailedTask.css
+++ b/wwwroot/css/DetailedTask.css
@@ -1,6 +1,6 @@
 ﻿.right-side-container{
    
-    margin-top:10px;
+    margin-top:1px;
     margin-bottom:60px;
     width:30%;
 }
@@ -57,4 +57,9 @@ media{
 .commet-area{
    margin-top:5px;
 }
-
+.button2 {
+    background-color: red;
+    border: 2px solid black;
+    margin-top: 5px;
+    outline:none;
+}
