--- a/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @using Microsoft.AspNetCore.Identity
 @attribute [IgnoreAntiforgeryToken]
-@inject SignInManager<IdentityUser> SignInManager
+@using Siemens.MP.Entities
+@inject SignInManager<UserInfo> SignInManager
 @functions {
     public async Task<IActionResult> OnPost()
     {
