--- a/Pages/KnowledgeDatabase.razor
+++ b/Pages/KnowledgeDatabase.razor
@@ -2,35 +2,37 @@
 
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @using Microsoft.AspNetCore.Identity;
-@inject UserManager<IdentityUser> UserManager;
+@using Siemens.MP.Entities
+
+@inject UserManager<UserInfo> UserManager;
 @inject Siemens.MP.Data.Repositories.GenericRepository<Siemens.MP.Entities.Article> ArticleRepository
 @using Siemens.MP.Enums
 
 <link rel="stylesheet" href="/css/knowledge.css">
 
-    <div class="modal-body row ">
+<div class="modal-body row ">
 
-        <div class="col-md-2 border-right border-dark toronto-content">
+    <div class="col-md-2 border-right border-dark toronto-content">
 
-            <h2>Categories</h2>
+        <h2>Categories</h2>
 
-            <ol class="list-group list-group-flush">
-                @foreach (ArticleCategory category in Enum.GetValues(typeof(ArticleCategory)))
-                {
-                    <li class="list-group-item border-top " @onclick="@(() => ChangeTheCategory(category))">
-                        <h5>@MakeEnumPretty(category)</h5>
-                    </li>
-                }
-            </ol>
-        </div>
-
-        <Siemens.MP.Pages.Components.KnowledgeDbArticlesListComponent @bind-articleCategory="articleCategory"></Siemens.MP.Pages.Components.KnowledgeDbArticlesListComponent>
-
-
-        <div class="align-self-end ml-auto">
-            <button type="button" class="btn btn-primary" onclick="location.href='addarticle'">Add article</button>
-        </div>
+        <ol class="list-group list-group-flush">
+            @foreach (ArticleCategory category in Enum.GetValues(typeof(ArticleCategory)))
+            {
+                <li class="list-group-item border-top " @onclick="@(() => ChangeTheCategory(category))">
+                    <h5>@MakeEnumPretty(category)</h5>
+                </li>
+            }
+        </ol>
     </div>
+
+    <Siemens.MP.Pages.Components.KnowledgeDbArticlesListComponent @bind-articleCategory="articleCategory"></Siemens.MP.Pages.Components.KnowledgeDbArticlesListComponent>
+
+
+    <div class="align-self-end ml-auto">
+        <button type="button" class="btn btn-primary" onclick="location.href='addarticle'">Add article</button>
+    </div>
+</div>
 
 
 
