--- a/Pages/DetailedTask.razor
+++ b/Pages/DetailedTask.razor
@@ -47,7 +47,22 @@
                     </span>
                     <button class="btn btn-primary" @onclick="UpdateDB">Update</button>
                 </li>
-                <li class="list-group-item py-4 border-style size-of-details">Priority: <span class="badge badge-danger">@task.PriorityState</span> </li>
+       
+                <li class="list-group-item py-4 border-style size-of-details">
+                    Priority:
+                    @if (task.PriorityState.Equals(Priority.HIGH))
+                    {
+                        <span class="badge badge-danger">@task.PriorityState</span>
+                    }
+                    @if (task.PriorityState.Equals(Priority.MEDIUM))
+                    {
+                        <span class="badge badge-warning">@task.PriorityState</span>
+                    }
+                    @if (task.PriorityState.Equals(Priority.LOW))
+                    {
+                        <span class="badge badge-success">@task.PriorityState</span>
+                    }
+                </li>
                 <li class="list-group-item py-4 border-style size-of-details">Created Date: @task.CreatedAt</li>
                 <li class="list-group-item py-4 border-style size-of-details">Due Date: @task.Deadline </li>
                 <li class="list-group-item py-4 border-style size-of-details">Remaining Time: @NumberOfDaysRemaining days</li>
