--- a/Pages/Tasks.razor
+++ b/Pages/Tasks.razor
@@ -168,7 +168,7 @@ else
     }
     public void Navigate(int id)
     {
-        navigationManager.NavigateTo($"/detailedtask/{id.ToString()}");
+        navigationManager.NavigateTo($"/content/{id.ToString()}");
 
     }
 
