--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -101,7 +101,7 @@
                     @foreach (var note in notes)
                     {
                         <li class="list-group-item d-flex justify-content-between align-items-center" style="background-color:#fcf5ec">
-                            <button class="buttonList" @onclick="ShowNoteContent">@note.Title</button>
+                            <button class="buttonList">@note.Title</button>
                             <p><i>@note.CreatedAt.ToShortDateString()</i></p>
                         </li>
                     }
@@ -131,55 +131,10 @@
                         </div>
                     </div>
                 }
-                <!--
-        @if (ShowContent == true)
-    {
-        <div class="modal fade show" style="display: block; padding-right: 17px;" tabindex="-1" role="dialog">
-            <div id="0HLQ1INKI0E3L" class="modal-backdrop fade show">
-            </div>
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">
-                            <i class="fas fa-edit"></i>Employee edit
-                        </h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body" style="max-height: 20vh; overflow-y: auto;;">
-                        <div class="form-group" style="">
-                            <label class="">Name</label>
-                            <input id="0HLQ1INKI0E3V" type="text" class="form-control" style="" placeholder="Enter name..." _bl_13="">
-                        </div>
-                        <div class="form-group" style="">
-                            <label class="">Surname</label>
-                            <input id="0HLQ1INKI0E40" type="text" class="form-control" style="" placeholder="Enter surname..." _bl_14="">
-                        </div>
-                        <div class="form-group" style="">
-                            <label class="">Date of birth</label>
-                            <input id="0HLQ1INKI0E41" type="date" class="form-control" style="" placeholder="Pick a date" _bl_15="">
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button id="0HLQ1INKI0E3T" type="button" class="btn btn-secondary" style="" _bl_11="">
-                            Close
-                        </button>
-                        <button id="0HLQ1INKI0E3U" type="button" class="btn btn-primary" style="" _bl_12="">
-                            Save Changes
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    }
-    -->
-
 
             </div>
         </div>
     </div>
-
 </body>
 
 
@@ -204,7 +159,6 @@
     private string content;
     private IList<Note> notes;
     bool ShowModal = false;
-    bool ShowContent = false;
 
 
     private void OpenModal()
@@ -239,18 +193,6 @@
         title = string.Empty;
         content = string.Empty;
     }
-
-    private void ShowNoteContent()
-    {
-        ShowContent = true;
-    }
-    
-    
-    private void CloseNoteContent()
-    {
-        ShowContent = false;
-    }
-
 
 
     protected override async System.Threading.Tasks.Task OnInitializedAsync()
